junit test adapted: aenderungsServicePerson now returns the conflicts so that they can be queried in the junit test